--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -16,30 +16,21 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
     ![In the Recovery Services vault blade, under Getting Started, Site Recovery is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image76.png "Recovery Services vault blade")
 
-3. Next, select **Prepare Infrastructure** in the **For On-Premises Machines** section. This will start you down a path of various steps to configure your VM that is running on Hyper-V on-premises to be replicated to Azure.
+3. In the **Hyper-V machines to Azure** section, select **1. Prepare infrastructure**.. This will start you down a path of various steps to configure your VM that is running on Hyper-V on-premises to be replicated to Azure.
 
     ![In the For On-Premises Machines section, Prepare Infrastructure is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image77.png "For On-Premises Machines section")
 
-4. On **Step 1 Protection Goal** select the following inputs and then select **OK**:
-
-    - **Where are your machines located?**: On-premises
-    - **Where do you want to replicate your machines to?**: To Azure
-    - **Are you performing a migration?**: No
-    - **I understand, but I would like to continue with Azure Site Recovery**: checked
-    - **Are your machines virtualized?**: Yes, with Hyper-V  (Your VM is running as a nested VM in Azure).
-    - **Are you using System Center VMM to manage your Hyper-V hosts?**: No
-
-    ![Fields in the Protection goal blade are set to the previously defined values.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image78.png "Protection goal blade")
-
-5. On **Step 2 Deployment planning**, confirm you have completed deployment planning by selecting **Yes, I have done it** then select **OK**.
+4. On **Step 1 Deployment planning**, confirm you have completed deployment planning by selecting **Yes, I have done it** then select **Next**.
 
     > **Note**: You can read more about planning an ASR to deployment here:
     >
     > <https://docs.microsoft.com/en-us/azure/site-recovery/site-recovery-hyper-v-deployment-planner>
 
     ![In the Deployment planning blade, Yes, I have done it is selected from a dropdown list.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image79.png "Deployment planning blade")
+    
+5. On the **Source settings** tab of the **Prepare infrastructure** blade, next to the **Are you Using System Center VMM to manage Hyper-V hosts** label, select the **No** option.
 
-6. On **Step 3 Prepare source** select **+Hyper-V Site**.
+6. On the **Source settings** tab of the **Prepare infrastructure** blade, select the **Add Hyper-V site** link.
 
     ![In the top menu of the Prepare source blade, +Hyper-V Site is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image80.png "Prepare source blade")
 
@@ -47,13 +38,13 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
     ![OnPremHyperVSite is in the Name field on the Create Hyper-V site blade.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image81.png "Create Hyper-V site blade")
 
-8. The portal will deploy the site providing you notifications. Wait for the creation process to complete, and the ASR portal will update once this is done. Your new site is now shown under **Step 1: Select Hyper-V site**.
+8. The portal will deploy the site providing you notifications. Wait for the creation process to complete, and the ASR portal will update once this is done.
 
     ![The Successfully completed creating Hyper-V site message displays.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image82.png "Success message")
 
     ![Under Step 1: Select Hyper-V site, OnPremHyperVSite is selected in the dropdown list.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image83.png "Step 1: Select Hyper-V site")
 
-9. Next select **+Hyper-V Server**.
+9. Next select **Add Hyper-V Server**.
 
     ![In the top menu of the Prepare source blade, Hyper-V Server is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image84.png "Prepare source blade")
 
