--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -30,6 +30,8 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
     
 5. On the **Source settings** tab of the **Prepare infrastructure** blade, next to the **Are you Using System Center VMM to manage Hyper-V hosts** label, select the **No** option.
 
+    ![In the Deployment planning blade, Yes, I have done it is selected from a dropdown list.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image406.png "Deployment planning blade")
+
 6. On the **Source settings** tab of the **Prepare infrastructure** blade, select the **Add Hyper-V site** link.
 
     ![In the top menu of the Prepare source blade, +Hyper-V Site is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image80.png "Prepare source blade")
