--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -206,11 +206,9 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
 44. You will need to return to the Prepare Source screen and select **+Hyper-V Server**. Notice the warning that it could take up to 30 mins for this server to appear, but in practice you should cancel out of this window by selecting Step 2 and then answer yes again with **I have done it** to the question of Deployment planning.
 
-    ![+Hyper-V Server is selected in the Prepare source blade.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image112.png "Prepare source blade")
+45. Once the Server appears, select **Next**.
 
-45. Once the Server appears, select **OK**.
-
-    ![In the Prepare source blade, a call out points to HYPERVHOST under Step 2.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image113.png "Prepare source blade")
+    ![In the Prepare source blade, a call out points to HYPERVHOST under Step 2.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image113-new.png "Prepare source blade")
 
 46. On **Step 4 Target Prepare** review the screen to better understand the various steps. Select **+Storage account** to add a storage account that will be used for the **OnPremVM** when it is failed over to Azure.
 
