--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -6,6 +6,28 @@ In this exercise, you will configure the three environments to use BCDR technolo
 
 > **Note**: Make sure prior to starting each task that the deployment that you started in Exercise 1 has completed for each as you come to that task. This can be determined by reviewing the deployments for each Resource group in the Azure portal. If it says Succeeded, then you can begin the task.
 
+### Task 0: Create Storage Account.
+
+1.  From the **LABVM** navigate to the Azure Portal, and navigate to **Resource Groups** and then **BCDRAzureSiteRecovery**.
+
+1.  Select **Create**.
+
+1.  In the Search box, enter **Storage Account,** and then select **Storage account -- blob, file, table, queue**.
+
+1.  Select **Create**.
+
+1.  Complete the **Create storage account** form using the following details, then select **Review + create**:
+
+    - **Resource group**: Use existing / BCDRAzureSiteRecovery.
+    - **Storage account name:** Unique name starting with `onpremvm`
+    - **Deployment model**: Resource manager
+    - **Account kind**: Storage (general purpose v2)
+    - **Performance**: Standard
+    - **Replication**: Locally-redundant storage (LRS)
+    - **Location**: Select the same location which you choose while creating **Recovery Services Vault**.
+    
+1.  Repeat the above steps to create another storage account but this time select **Premium** under **Performance** tier.
+
 ### Task 1: Configure on-premises to Azure IaaS failover
 
 In this task, the **OnPremVM** will be configured to replicate to Azure and be ready to failover to the **BCDRIaaSSecondarySite**. This will consist of configuring your Hyper-V host with the ASR provider and then enabling replication of the VM to the Recovery Service Vault.
