--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -6,7 +6,7 @@ In this exercise, you will configure the three environments to use BCDR technolo
 
 > **Note**: Make sure prior to starting each task that the deployment that you started in Exercise 1 has completed for each as you come to that task. This can be determined by reviewing the deployments for each Resource group in the Azure portal. If it says Succeeded, then you can begin the task.
 
-### Task 0: Create Storage Account.
+### Task 0: Create Storage Accounts.
 
 1.  From the **LABVM** navigate to the Azure Portal, and navigate to **Resource Groups** and then **BCDRAzureSiteRecovery**.
 
@@ -232,11 +232,11 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
     ![In the Prepare source blade, a call out points to HYPERVHOST under Step 2.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image113-new.png "Prepare source blade")
 
-50. You will be failing the **OnPremVM** into the **Secondary** site that was deployed with your IaaS installation, so you already have a Virtual Network created. Select **OK** on the Target blade to continue.
+50. You will be failing the **OnPremVM** into the **Secondary** site that was deployed with your IaaS installation, so you already have a Virtual Network created. Select **Next** on the Target blade to continue.
 
-    ![The Target blade is shown indicating three steps that need to be completed. Step 1: Select Azure subscription, Step 2: Ensure at least one compatible storage account exists, and Step 3: Ensure that at least one compatible Azure virtual network exists.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image117.png "Target blade")
+    ![The Target blade is shown indicating three steps that need to be completed. Step 1: Select Azure subscription, Step 2: Ensure at least one compatible storage account exists, and Step 3: Ensure that at least one compatible Azure virtual network exists.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image117-new.png "Target blade")
 
-51. On the **Replication Policy** screen, select the **+Create and Associate** item.
+51. On the **Replication Policy** screen, select the **Create new policy and Associate** item.
 
     ![Create and Associate is selected in the Replication Policy blade.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image118.png "Replication Policy blade")
 
