--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -252,13 +252,13 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
     > **Note**: This will take a couple of minutes to complete. Please wait until this completes prior to moving on.
 
-    Once complete, select **OK**.
+    Once complete, select **Next**.
 
     ![The OK button is selected in the Replication policy blade following messages indicating the replication policy has been successfully created and associated with OnPremHyperVSite.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image122.png "Replication policy blade")
 
-54. Select **OK** again, and the process for adding the Hyper-V Server to the Recovery Services Vault will be complete.
+54. Select **Prepare**, and the process for adding the Hyper-V Server to the Recovery Services Vault will be complete.
 
-    ![The OK button is selected in the Prepare infrastructure blade that indicates all five tasks have been completed.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image123.png "Prepare infrastructure blade")
+    ![The OK button is selected in the Prepare infrastructure blade that indicates all five tasks have been completed.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image123-new.png "Prepare infrastructure blade")
 
 55. Next, select Step 1: **Replicate Application**.
 
