--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -262,11 +262,11 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
 55. Next, select Step 1: **Replicate Application**.
 
-    ![In the Recovery Services vault blade, Step 1: Replicate Application is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image124.png "Recovery Services vault blade")
+    ![In the Recovery Services vault blade, Step 1: Replicate Application is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image124-new.png "Recovery Services vault blade")
 
-56. On the Source blade select: **Source**: **On-premises**, **Are you performing a migration**: **No**, and **Source location**: **OnPremHyperVSite** and select **OK**.
+56. On the Source blade select: **Source location**: **OnPremHyperVSite** and select **OK**.
 
-    ![Fields in the Source blade are set to the previously defined values.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image125.png "Source blade")
+    ![Fields in the Source blade are set to the previously defined values.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image125-new.png "Source blade")
 
 57. Complete the Target blade, select the following values:
 
