--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -260,7 +260,7 @@ In this task, the **OnPremVM** will be configured to replicate to Azure and be r
 
     ![The OK button is selected in the Prepare infrastructure blade that indicates all five tasks have been completed.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image123-new.png "Prepare infrastructure blade")
 
-55. Next, select Step 1: **Replicate Application**.
+55. Next, select Step 2: **Enable Replication**.
 
     ![In the Recovery Services vault blade, Step 1: Replicate Application is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image115-new.png "Recovery Services vault blade")
 
