--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -10,11 +10,19 @@ In this exercise, you will configure the three environments to use BCDR technolo
 
 1.  From the **LABVM** navigate to the Azure Portal, and navigate to **Resource Groups** and then **BCDRAzureSiteRecovery**.
 
+    ![In the Resource groups blade, under Name, BCDRAzureSiteRecovery is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image139.png "Resource groups blade")
+
 1.  Select **Create**.
+
+    ![In the Resource Group blade, the +Add button is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image140.png "Resource Group blade")
 
 1.  In the Search box, enter **Storage Account,** and then select **Storage account -- blob, file, table, queue**.
 
+    ![In the search box Storage Account is entered, from the search results, Storage account - blob, file, table, queue is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image141.png "Everything blade")
+
 1.  Select **Create**.
+
+    ![Screenshot of the Create button.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image142.png "Create button")
 
 1.  Complete the **Create storage account** form using the following details, then select **Review + create**:
 
