--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -363,7 +363,7 @@ In this task, you will build a Windows Failover Cluster and configure SQL Always
 
     ![Screenshot of the Create button.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image142.png "Create button")
 
-5. Complete the **Create storage account** form using the following details, then select **Review + create**:
+5. Complete the **Create storage account** form using the following details, then select **Next**:
 
     - **Resource group**: Use existing / BCDRAzureSiteRecovery.
     - **Storage account name:** Unique name starting with `bcdrcloudwitness`
@@ -374,6 +374,8 @@ In this task, you will build a Windows Failover Cluster and configure SQL Always
     - **Location**: Any location in your area that is **NOT** your Primary or Secondary site.
 
     ![Fields in the Create storage account blade are set to the previously defined settings.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image143.png "Create storage account blade")
+    
+6.  On the **Advanced** tab select **Minimum TLS version** as **Version 1.0**. Select **Review + Create**.
 
 6. Once the storage account is created, locate and select **Access keys** under **Settings**.
 
