--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -375,7 +375,7 @@ In this task, you will build a Windows Failover Cluster and configure SQL Always
 
     ![Fields in the Create storage account blade are set to the previously defined settings.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image143.png "Create storage account blade")
     
-6.  On the **Advanced** tab select **Minimum TLS version** as **Version 1.0**. Select **Review + Create**.
+6.  On the **Advanced** tab select **Minimum TLS version** as **Version 1.0**, select **Review + Create**.
 
 6. Once the storage account is created, locate and select **Access keys** under **Settings**.
 
