--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -34,6 +34,8 @@ In this exercise, you will configure the three environments to use BCDR technolo
     - **Replication**: Locally-redundant storage (LRS)
     - **Location**: Select the same location which you choose while creating **Recovery Services Vault**.
     
+    ![Fields in the Create storage account blade are set to the previously defined settings.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image407.png "Create storage account blade")
+    
 1.  Repeat the above steps to create another storage account but this time select **Premium** under **Performance** tier.
 
 ### Task 1: Configure on-premises to Azure IaaS failover
