--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -38,6 +38,8 @@ In this exercise, you will configure the three environments to use BCDR technolo
     
 1.  Repeat the above steps to create another storage account but this time select **Premium** under **Performance** tier.
 
+    ![Fields in the Create storage account blade are set to the previously defined settings.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image408.png "Create storage account blade")
+
 ### Task 1: Configure on-premises to Azure IaaS failover
 
 In this task, the **OnPremVM** will be configured to replicate to Azure and be ready to failover to the **BCDRIaaSSecondarySite**. This will consist of configuring your Hyper-V host with the ASR provider and then enabling replication of the VM to the Recovery Service Vault.
