--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -12,7 +12,7 @@ In this exercise, you will configure the three environments to use BCDR technolo
 
     ![In the Resource groups blade, under Name, BCDRAzureSiteRecovery is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image139.png "Resource groups blade")
 
-1.  Select **Create**.
+1.  Select **+Add**.
 
     ![In the Resource Group blade, the +Add button is selected.](images/Hands-onlabstep-bystep-Businesscontinuityanddisasterrecoveryimages/media/image140.png "Resource Group blade")
 
